--- a/languages/go/go.org
+++ b/languages/go/go.org
@@ -43,15 +43,45 @@
   - -w turns off DWARF debugging information (no gdb/pprof)
   - -s turns off the generation of symbol table (no go tool nm)
   > strip -x
-- TUI Libraries
-  https://charm.sh/
 
-* Versions Changes
+* Language
+** Imports
+|-----------------+-----------------------------|
+| dirname/main.go | package dirname             |
+|-----------------+-----------------------------|
+| go.mod          | module modname              |
+|-----------------+-----------------------------|
+| main.go         | import "modname/dirname"    |
+|                 | dirname.Fn(2)               |
+|-----------------+-----------------------------|
+| main.go         | import dn "modname/dirname" |
+|                 | dn.Fn(2)                    |
+|-----------------+-----------------------------|
+** Types
+*** Simple
+|--------+-------|
+| int    | 0     |
+| string | ""    |
+| bool   | false |
+|--------+-------|
+*** Complex
+|--------+------------|
+| arrays | [N]PTYPE{} |
+| slices | []PTYPE{}  |
+|--------+------------|
+** Changelog
 https://go.dev/doc/go1.18
-* Standard Library
+
+- 2021
+  - animals = slices.Delete(animals, 0, 1)
+  - for value := range 10
+
+** Standard Library
+
 - https://pkg.go.dev/std
   https://pkg.go.dev/strconv
-** archive
+
+*** archive
 
 | /tar     | implements access to tar archives.                                                                                                                                                                      |
 | /zip     | provides support for reading and writing ZIP archives.                                                                                                                                                  |
@@ -59,7 +89,7 @@ https://go.dev/doc/go1.18
 | /builtin | provides documentation for Go's predeclared identifiers.                                                                                                                                                |
 | /bytes   | implements functions for the manipulation of byte slices.                                                                                                                                               |
 
-** compress
+*** compress
 
 | /bzip2 | implements bzip2 decompression.                                                                                                                                              |
 | /flate | implements the DEFLATE compressed data format, described in RFC 1951.                                                                                                        |
@@ -67,14 +97,14 @@ https://go.dev/doc/go1.18
 | /lzw   | implements the Lempel-Ziv-Welch compressed data format, described in T. A. Welch, “A Technique for High-Performance Data Compression”, Computer, 17(6) (June 1984), pp 8-19. |
 | /zlib  | implements reading and writing of zlib format compressed data, as specified in RFC 1950.                                                                                     |
 
-** container
+*** container
 
 | /heap | provides heap operations for any type that implements heap.Interface. |
 | /list | implements a doubly linked list.                                      |
 | /ring | implements operations on circular lists.                              |
 
-** context  - defines the Context type, which carries deadlines, cancellation signals, and other request-scoped values across API boundaries and between processes.
-** crypto   - collects common cryptographic constants.
+*** context  - defines the Context type, which carries deadlines, cancellation signals, and other request-scoped values across API boundaries and between processes.
+*** crypto   - collects common cryptographic constants.
 
 | /aes       | implements AES encryption (formerly Rijndael), as defined in U.S. Federal Information Processing Standards Publication 197.                                                 |
 | /cipher    | implements standard block cipher modes that can be wrapped around low-level block cipher implementations.                                                                   |
@@ -97,12 +127,12 @@ https://go.dev/doc/go1.18
 | /x509      | implements a subset of the X.509 standard.                                                                                                                                  |
 | /x509/pkix | contains shared, low level structures used for ASN.1 parsing and serialization of X.509 certificates, CRL and OCSP.                                                         |
 
-** database
+*** database
 
 | /sql        | provides a generic interface around SQL (or SQL-like) databases.                 |
 | /sql/driver | defines interfaces to be implemented by database drivers as used by package sql. |
 
-** debug
+*** debug
 
 | /buildinfo | provides access to information embedded in a Go binary about how it was built.                                                                                |
 | /dwarf     | provides access to DWARF debugging information loaded from executable files, as defined in the DWARF 2.0 Standard at http://dwarfstd.org/doc/dwarf-2.0.0.pdf. |
@@ -112,8 +142,8 @@ https://go.dev/doc/go1.18
 | /pe        | implements access to PE (Microsoft Windows Portable Executable) files.                                                                                        |
 | /plan9obj  | implements access to Plan 9 a.out object files.                                                                                                               |
 
-** embed    - provides access to files embedded in the running Go program.
-** encoding - defines interfaces shared by other packages that convert data to and from byte-level and textual representations.
+*** embed    - provides access to files embedded in the running Go program.
+*** encoding - defines interfaces shared by other packages that convert data to and from byte-level and textual representations.
 
 | /ascii85 | implements the ascii85 data encoding as used in the btoa tool and Adobe's PostScript and PDF document formats. |
 | /asn1    | implements parsing of DER-encoded ASN.1 data structures, as defined in ITU-T Rec X.690.                        |
@@ -127,11 +157,11 @@ https://go.dev/doc/go1.18
 | /pem     | implements the PEM data encoding, which originated in Privacy Enhanced Mail.                                   |
 | /xml     | implements a simple XML 1.0 parser that understands XML name spaces.                                           |
 
-** errors   - implements functions to manipulate errors.
-** expvar   - provides a standardized interface to public variables, such as operation counters in servers.
-** flag     - implements command-line flag parsing.
-** fmt      - implements formatted I/O with functions analogous to C's printf and scanf.
-** go
+*** errors   - implements functions to manipulate errors.
+*** expvar   - provides a standardized interface to public variables, such as operation counters in servers.
+*** flag     - implements command-line flag parsing.
+*** fmt      - implements formatted I/O with functions analogous to C's printf and scanf.
+*** go
 
 | /ast              | declares the types used to represent syntax trees for Go packages.                                                                                                                             |
 | /build            | gathers information about Go packages.                                                                                                                                                         |
@@ -147,7 +177,7 @@ https://go.dev/doc/go1.18
 | /token            | defines constants representing the lexical tokens of the Go programming language and basic operations on tokens (printing, predicates).                                                        |
 | /types            | declares the data types and implements the algorithms for type-checking of Go packages.                                                                                                        |
 
-** hash     - provides interfaces for hash functions.
+*** hash     - provides interfaces for hash functions.
 
 | adler32 | implements the Adler-32 checksum.                                                                                      |
 | crc32   | implements the 32-bit cyclic redundancy check, or CRC-32, checksum.                                                    |
@@ -155,11 +185,11 @@ https://go.dev/doc/go1.18
 | fnv     | implements FNV-1 and FNV-1a, non-cryptographic hash functions created by Glenn Fowler, Landon Curt Noll, and Phong Vo. |
 | maphash | provides hash functions on byte sequences.                                                                             |
 
-** html     - provides functions for escaping and unescaping HTML text.
+*** html     - provides functions for escaping and unescaping HTML text.
 
 | /template | implements data-driven templates for generating HTML output safe against code injection. |
 
-** image    - implements a basic 2-D image library.
+*** image    - implements a basic 2-D image library.
 
 | /color         | implements a basic color library.            |
 | /color/palette | provides standard color palettes.            |
@@ -168,11 +198,11 @@ https://go.dev/doc/go1.18
 | /jpeg          | implements a JPEG image decoder and encoder. |
 | /png           | implements a PNG image decoder and encoder.  |
 
-** index
+*** index
 
 | suffixarray | implements substring search in logarithmic time using an in-memory suffix array. |
 
-** internal
+*** internal
 
 | /abi                      |                                                                                                                                                                          |
 | /buildcfg                 | buildcfg provides access to the build configuration described by the current environment.                                                                        |
@@ -233,28 +263,28 @@ https://go.dev/doc/go1.18
 | /types/errors             |                                                                                                                                                                          |
 | /unsafeheader             | unsafeheader contains header declarations for the Go runtime's slice and string implementations.                                                                 |
 | /xcoff                    | xcoff implements access to XCOFF (Extended Common Object File Format) files.                                                                                     |
-** io       - provides basic interfaces to I/O primitives.
+*** io       - provides basic interfaces to I/O primitives.
 
 | fs     | defines basic interfaces to a file system. |
 | ioutil | implements some I/O utility functions.     |
 
-** log      - implements a simple logging package.
+*** log      - implements a simple logging package.
 
 | syslog | provides a simple interface to the system log service. |
 
-** math     - provides basic constants and mathematical functions.
+*** math     - provides basic constants and mathematical functions.
 
 | /big   | implements arbitrary-precision arithmetic (big numbers).                                       |
 | /bits  | implements bit counting and manipulation functions for the predeclared unsigned integer types. |
 | /cmplx | provides basic constants and mathematical functions for complex numbers.                       |
 | /rand  | implements pseudo-random number generators unsuitable for security-sensitive work.             |
 
-** mime     - implements parts of the MIME spec.
+*** mime     - implements parts of the MIME spec.
 
 | /multipart       | implements MIME multipart parsing, as defined in RFC 2046.     |
 | /quotedprintable | implements quoted-printable encoding as specified by RFC 2045. |
 
-** net      - provides a portable interface for network I/O, including TCP/IP, UDP, domain name resolution, and Unix domain sockets.
+*** net      - provides a portable interface for network I/O, including TCP/IP, UDP, domain name resolution, and Unix domain sockets.
 
 | /http           | provides HTTP client and server implementations.                                                           |
 | /http/cgi       | implements CGI (Common Gateway Interface) as specified in RFC 3875.                                        |
@@ -272,23 +302,23 @@ https://go.dev/doc/go1.18
 | /textproto      | implements generic support for text-based request/response protocols in the style of HTTP, NNTP, and SMTP. |
 | /url            | parses URLs and implements query escaping.                                                                 |
 
-** os       - provides a platform-independent interface to operating system functionality.
+*** os       - provides a platform-independent interface to operating system functionality.
 
 | /exec   | runs external commands.                    |
 | /signal | implements access to incoming signals.     |
 | /user   | allows user account lookups by name or id. |
 
-** path     - implements utility routines for manipulating slash-separated paths.
+*** path     - implements utility routines for manipulating slash-separated paths.
 
 | /filepath | implements utility routines for manipulating filename paths in a way compatible with the target operating system-defined file paths. |
 
-** plugin   - implements loading and symbol resolution of Go plugins.
-** reflect  - implements run-time reflection, allowing a program to manipulate objects with arbitrary types.
-** regexp   - implements regular expression search.
+*** plugin   - implements loading and symbol resolution of Go plugins.
+*** reflect  - implements run-time reflection, allowing a program to manipulate objects with arbitrary types.
+*** regexp   - implements regular expression search.
 
 | /syntax | parses regular expressions into parse trees and compiles parse trees into programs. |
 
-** runtime  - contains operations that interact with Go's runtime system, such as functions to control goroutines.
+*** runtime  - contains operations that interact with Go's runtime system, such as functions to control goroutines.
 
 | /cgo      | contains runtime support for code generated by the cgo tool.                                     |
 | /coverage |                                                                                                  |
@@ -298,85 +328,68 @@ https://go.dev/doc/go1.18
 | /race     | implements data race detection logic.                                                            |
 | /trace    | contains facilities for programs to generate traces for the Go execution tracer.                 |
 
-** sort	    - provides primitives for sorting slices and user-defined collections.
-** strconv  - implements conversions to and from string representations of basic data types.
-** strings  - implements simple functions to manipulate UTF-8 encoded strings.
-** sync	    - provides basic synchronization primitives such as mutual exclusion locks.
+*** sort	    - provides primitives for sorting slices and user-defined collections.
+*** strconv  - implements conversions to and from string representations of basic data types.
+*** strings  - implements simple functions to manipulate UTF-8 encoded strings.
+*** sync	    - provides basic synchronization primitives such as mutual exclusion locks.
 
 | /atomic | provides low-level atomic memory primitives useful for implementing synchronization algorithms. |
 
-** syscall  - contains an interface to the low-level operating system primitives.
+*** syscall  - contains an interface to the low-level operating system primitives.
 
 | /js | gives access to the WebAssembly host environment when using the js/wasm architecture. |
 
-** testing  - provides support for automated testing of Go packages.
+*** testing  - provides support for automated testing of Go packages.
 
 | /fstest | implements support for testing implementations and users of file systems. |
 | /iotest | implements Readers and Writers useful mainly for testing.                 |
 | /quick  | implements utility functions to help with black box testing.              |
 
-** text
+*** text
 
 | /scanner        | provides a scanner and tokenizer for UTF-8-encoded text.                                                         |
 | /tabwriter      | implements a write filter (tabwriter.Writer) that translates tabbed columns in input into properly aligned text. |
 | /template       | implements data-driven templates for generating textual output.                                                  |
 | /template/parse | builds parse trees for templates as defined by text/template and html/template.                                  |
 
-** time	    - provides functionality for measuring and displaying time.
+*** time	    - provides functionality for measuring and displaying time.
 
 | /tzdata | provides an embedded copy of the timezone database. |
 
-** unicode  - provides data and functions to test some properties of Unicode code points.
+*** unicode  - provides data and functions to test some properties of Unicode code points.
 
 | /utf16 | implements encoding and decoding of UTF-16 sequences.                |
 | /utf8  | implements functions and constants to support text encoded in UTF-8. |
 
-** unsafe   - contains operations that step around the type safety of Go programs.
-* Standard Library Extension
+*** unsafe   - contains operations that step around the type safety of Go programs.
+
+** Standard Library Extension
 https://pkg.go.dev/golang.org/x
 
-** benchmarks — benchmarks to measure Go as it is developed.
-** build      — build.golang.org's implementation.
-** crypto     — additional cryptography packages.
-** debug      — an experimental debugger for Go.
-** exp        — experimental and deprecated packages (handle with care; may change without warning).
-** image      — additional imaging packages.
-** mobile     — experimental support for Go on mobile platforms.
-** mod        — packages for writing tools that work with Go modules.
-** net        — additional networking packages.
-** oauth2     — a client implementation for the OAuth 2.0 spec
-** perf       — packages and tools for performance measurement, storage, and analysis.
-** pkgsite    — home of the pkg.go.dev website.
-** review     — a tool for working with Gerrit code reviews.
-** sync       — additional concurrency primitives.
-** sys        — packages for making system calls.
-** term       — Go terminal and console support packages.
-** text       — packages for working with text.
-** time       — additional time packages.
-** tools      — godoc, goimports, gorename, and other tools.
-** tour       — tour.golang.org's implementation.
-** vuln       — packages for accessing and analyzing data from the Go Vulnerability Database.
-** website    — home of the go.dev and golang.org websites.
+- benchmarks — benchmarks to measure Go as it is developed.
+- build      — build.golang.org's implementation.
+- crypto     — additional cryptography packages.
+- debug      — an experimental debugger for Go.
+- exp        — experimental and deprecated packages (handle with care; may change without warning).
+- image      — additional imaging packages.
+- mobile     — experimental support for Go on mobile platforms.
+- mod        — packages for writing tools that work with Go modules.
+- net        — additional networking packages.
+- oauth2     — a client implementation for the OAuth 2.0 spec
+- perf       — packages and tools for performance measurement, storage, and analysis.
+- pkgsite    — home of the pkg.go.dev website.
+- review     — a tool for working with Gerrit code reviews.
+- sync       — additional concurrency primitives.
+- sys        — packages for making system calls.
+- term       — Go terminal and console support packages.
+- text       — packages for working with text.
+- time       — additional time packages.
+- tools      — godoc, goimports, gorename, and other tools.
+- tour       — tour.golang.org's implementation.
+- vuln       — packages for accessing and analyzing data from the Go Vulnerability Database.
+- website    — home of the go.dev and golang.org websites.
 
-* Libraries
-|-------------+----+----+-------------------------------+--------------------------------------------|
-| =name=      |    |  k | =description=                 | =repo url=                                 |
-|-------------+----+----+-------------------------------+--------------------------------------------|
-| mysql       | 23 | 13 | mysql driver                  | https://github.com/go-sql-driver/mysql     |
-| goquery     | 23 | 12 | jQuery/html parser            | https://github.com/PuerkitoBio/goquery     |
-| go-colorful | 22 |  1 | colors                        | https://github.com/lucasb-eyer/go-colorful |
-| ease        | 17 |  0 | easing functions              | https://github.com/fogleman/ease           |
-|-------------+----+----+-------------------------------+--------------------------------------------|
-| bubbletea   | 23 | 17 | tui framework                 | https://github.com/charmbracelet/bubbletea |
-| lipgloss    | 23 |  5 | terminal style                | https://github.com/charmbracelet/lipgloss  |
-| bubbles     | 23 |  3 | tea tui components            | https://github.com/charmbracelet/bubbles   |
-| glamour     | 23 |  1 | markdown rendering            | https://github.com/charmbracelet/glamour   |
-| harmonica   | 22 |  1 | physics based animation       | https://github.com/charmbracelet/harmonica |
-| termenv     | 23 |  1 | terminal style/colors         | https://github.com/muesli/termenv          |
-| reflow      | 23 |  0 | text reflow ops               | https://github.com/muesli/reflow/          |
-| go-isatty   | 23 |  0 | isatty for golang             | https://github.com/mattn/go-isatty         |
-| go-osc52    | 23 |  0 | clipboard                     | https://github.com/aymanbagabas/go-osc52/  |
-|-------------+----+----+-------------------------------+--------------------------------------------|
+
 * Personalities
 ** Rob Pike
 https://www.youtube.com/playlist?list=PL3NQHgGj2vtsJkK6ZyTzogNUTqe4nFSWd
