--- a/hardware/chip8.org
+++ b/hardware/chip8.org
@@ -11,6 +11,15 @@
 - Chip-8: Technical Reference v1.0
   http://devernay.free.fr/hacks/chip8/C8TECH10.HTM
 
+- https://github.com/tobiasvl/awesome-chip-8
+- https://wiki.xxiivv.com/site/chip8.html
+
+- roms
+  - test rom https://github.com/corax89/chip8-test-rom
+  - many https://github.com/dmatlack/chip8/tree/master/roms/games
+
+- tool: emulator/workbench https://github.com/massung/CHIP-8
+
 * Videos
 
 - (Code Cap) 2h - Javascript - Building and understanding a Virtual Machine in 2hrs (CHIP-8 Emulator)
@@ -27,6 +36,15 @@
   https://www.youtube.com/watch?v=MBWyVwyBMhk
 - (makigas) Construyendo un emulador CHIP8
   https://www.youtube.com/playlist?list=PLTd5ehIj0goNh89DWAjXKCYxJQO0ZMxaE
-* Steve Losh Chip-8
+
+* Implementations
+
+- 12 article: Python http://omokute.blogspot.com/2012/06/emulation-basics-write-your-own-chip-8.html
+- 19 article: C++ https://austinmorlan.com/posts/chip8_emulator/
+- 20 article: Guide to making a CHIP-8 emulator https://tobiasvl.github.io/blog/write-a-chip-8-emulator/
+- C https://github.com/dmatlack/chip8
+- JS https://www.freecodecamp.org/news/creating-your-very-own-chip-8-emulator/
+
+** Lisp: Steve Losh
 Blog: http://stevelosh.com/blog/2016/12/chip8-cpu/
 Source: https://github.com/sjl/cl-chip8
