--- a/languages/ruby/self.org
+++ b/languages/ruby/self.org
@@ -11,6 +11,9 @@
 
 - #!/usr/bin/env ruby
 
+- challenges
+  - https://www.rubykoans.com/
+
 - implementations
   - mobile http://www.rubymotion.com/
   - java https://www.jruby.org
@@ -31,6 +34,11 @@
   - useful for debugging chain of method calls
   - takes a block, pass the receiver, and then return the orignal receiver of the method
   - a "no-op", execept that invokes a block
+- restricted to pure 7-bit ascii for operators,
+  for compatibility across all different source file encodings
+- when we call a method without putting a receiver object before it
+  it refers to the object named "self"
+  aka "puts == self.puts"
 
 ** testing
 
@@ -53,7 +61,7 @@
 - %i[] to create array of strings
 - <<
   - array << el
-  - append to an array
+  - #append el to array
 
 ** require
 
@@ -149,87 +157,181 @@ https://rubyreferences.github.io/rubychanges/evolution.html
     square = 4
     square = square * square while square < 1000
   #+end_src
+- loop/end
+  - infinite loop
+  - break out of them
+  - it will also auto-break if the *Enumerator* inside runs out of values
+    #+begin_src ruby
+      short_enum = [1,2,3].to_enum
+      long_enum = ('a'..'z').to_enum
+      loop do # loops 3 times
+        puts "#{short_enum.next} - #{long_enum.next}"
+      end
+    #+end_src
 
 ** a =block= {} do/end
-  - usage: to package code to implement a later callback
-  - parameters to a block are ALWAYS local to that block
-  - has access to variables outside his scope
-  - =Iterator= or =Enumerator= a method that can invoke a block of code repeatedly
-  - invoked in a method using ~yield~
-    - parameters put after a ; are considered locals to that block (awk-ish) (RARE!)
-      #+begin_src ruby
-        square = "some shape"
-        sum = 0
-        [1,2,3,4].each do |value;square|
-          square = value * value
-          sum += square
+
+- blocks are closures
+- is a chunk of code you can pass to a method, as it were another parameter
+
+- assign a block to a variable, all of these return a =Proc= from the block
+  #+begin_src ruby
+    bo = ->(param) { puts "You called me with #{param}" } # stabby lambda, optional parens
+    bo = lambda { |param| puts "You called me with #{param}" } # Kernel method "lambda", error on wrong nargs
+    bo = proc { |param| puts "You called me with #{param}" } # Kernel method "proc", bubble ups "return"
+    bo = Proc.new { |param| puts "You called me with #{param}" } # same but OLD style
+    bo.call(99)
+  #+end_src
+
+- can be passed to a *method* either
+  1) extra IMPLICIT last argument that's passed to a method
+  2) (&) EXPLICIT last argument, to call store it and call it later (callbacks)
+     #+begin_src ruby
+       class ProcExample
+         def pass_in_block(&action)
+           @stored_proc = action
+         end
+         def use_proc(parameter)
+           @stored_proc.call(parameter) # .call stored block
+         end
+       end
+       eg = ProcExample.new
+       eg.pass_in_block { |param| puts "The parameter is #{param}" }
+       eg.use_proc(99)
+     #+end_src
+
+- parameters to a block are ALWAYS local to that block
+- has access to variables outside his scope
+- =Iterator= or =Enumerator= a method that can invoke a block of code repeatedly
+- you can only pass one block per method call
+  greet("dave", "loyal customer") { puts "hi" }
+- invoked in a method using ~yield~
+  - block parameters put after a ; are considered locals to that block (awk-ish) (RARE!)
+    #+begin_src ruby
+      square = "some shape"
+      sum = 0
+      [1,2,3,4].each do |value;square|
+        square = value * value
+        sum += square
+      end
+      puts sum
+      puts square
+    #+end_src
+  - no argument
+    #+begin_src ruby
+      def call_block
+        puts "Start of method"
+        yield
+        yield
+        puts "End of method"
+      end
+      call_block { puts "In the block" }
+    #+end_src
+  - with arguments
+    #+begin_src ruby
+      def who_says_what
+        yield("Dave", "hello")
+        yield("Andy", "goodbye")
+      end
+      who_says_what { |person, phrase| puts "#{person} says #{phrase}" }
+    #+end_src
+  - for =transactions= (ME: using blocks for meta-programming stuff)
+    #+begin_src ruby
+      class File
+        def self.open_and_process(*args) # class method
+          f = File.open(*args)
+          yield f
+          f.close()
         end
-        puts sum
-        puts square
-      #+end_src
-    - no argument
-      #+begin_src ruby
-        def call_block
-          puts "Start of method"
-          yield
-          yield
-          puts "End of method"
+      end
+
+      File.open_and_process("testfile", "r") do |file|
+        while line = file.gets
+          puts line
         end
-        call_block { puts "In the block" }
-      #+end_src
-    - with arguments
-      #+begin_src ruby
-        def who_says_what
-          yield("Dave", "hello")
-          yield("Andy", "goodbye")
-        end
-        who_says_what { |person, phrase| puts "#{person} says #{phrase}" }
-      #+end_src
-  - is a chunk of code you can pass to a method, as it were another parameter
-  - you can only pass one block per method call
-    greet("dave", "loyal customer") { puts "hi" }
+      end
+    #+end_src
+
+** Classes
+
+#+NAME: from "Programming Ruby 3.3"
+#+begin_src ruby
+  class BookInStock
+    attr_accessor :price      # would create a attr_reader/attr_writer
+    attr_reader :isbn #, :price   # creates the reader accessor methods #isbn and #price, for @isbn and @price
+    def initialize(isbn, price) # called by BookInStock.new
+      @isbn = isbn
+      @price = Float(price)
+    end
+    # def price=(new_price) # setter
+    #   @price = new_price
+    # end
+    def price_in_cents
+      (price * 100).round # !!!! is valid to refer to it either as "price" or "@price"
+    end
+    def price_in_cents=(cents) # setter for a "virtual isntance variable", giving a "uniform access principle"
+      @price = cents / 100.0
+    end
+  end
+  book = BookInStock.new("isbn1", 33.80)
+  book.price = book.price * 0.75 # using the setter and getter
+#+end_src
+
+#+NAME: optionally take a block
+#+begin_src ruby
+  class File
+    def self.my_open(*args) # CLASS METHOD, parameter list into array "args"
+      file = File.new(*args) # spread array "args", into individual arguments
+      return file unless block_given? # guard return if no block_given?
+      result = yield file
+      file.close
+      result
+    end
+  end
+#+end_src
+
+- Classes
+  - created with NAME.new
+  - has/can have
+    - each instance has an ~object_id~ /property/
+    - instance variables
+  - attributes are just methods without arguments
+  - the "only easy" way to change an object's state is by calling onf its methods
+
+** Methods (.)
+  - can be redefining (just warns about it)
+  - the verbs of ruby
+  - attached at the end of variables with by a dot
+  - some methods (such as =print=) are kernel methods, won't use the dot
+  - parameters
+    - =positional= foo
+    - =keyword= rank: 10
+      needs the keyword to be passed
+    - =default= rank = 10
+      with a possible computed default
+      (ME: aka &optional)
+  - kinds
+    - Class Methods (::)
+      - attached after variables and constants by a double colon
+    - instance methods (.)
+      - called by RECEIVER.METHODNAME
+      - a *message* is being send to the object,
+        which contains the method name along with arguments
+  - special
+    - to_s
+    - inspect
+    - each
+  - arguments, keyword args, *,**splats, &arguments
+  - Types
+    - public: by default (except initialize which is private) (RARE explicit)
+    - protected: can be invoked by class or subclasses (RARE!) can be used on attr_reader/w/a
+    - private: cannot be invoked without an explicit receiver
 
 ** types
 
 - Ruby 2: diagram of classes
   http://jeromedalbert.com/a-diagram-of-the-ruby-core-object-model/
   https://farm6.staticflickr.com/5443/10075536704_84aa13676a_o.jpg
-
-- Classes
-  - attributes are just methods without arguments
-  - the "only easy" way to change an object's state is by calling onf its methods
-  - Methods
-    - special
-      - to_s
-      - inspect
-      - each
-    - arguments, keyword args, *,**splats, &arguments
-    - Types
-      - public: by default (except initialize which is private) (RARE explicit)
-      - protected: can be invoked by class or subclasses (RARE!) can be used on attr_reader/w/a
-      - private: cannot be invoked without an explicit receiver
-  #+NAME: from "Programming Ruby 3.3"
-  #+begin_src ruby
-    class BookInStock
-      attr_accessor :price      # would create a attr_reader/attr_writer
-      attr_reader :isbn #, :price   # creates the reader accessor methods #isbn and #price, for @isbn and @price
-      def initialize(isbn, price) # called by BookInStock.new
-        @isbn = isbn
-        @price = Float(price)
-      end
-      # def price=(new_price) # setter
-      #   @price = new_price
-      # end
-      def price_in_cents
-        (price * 100).round # !!!! is valid to refer to it either as "price" or "@price"
-      end
-      def price_in_cents=(cents) # setter for a "virtual isntance variable", giving a "uniform access principle"
-        @price = cents / 100.0
-      end
-    end
-    book = BookInStock.new("isbn1", 33.80)
-    book.price = book.price * 0.75 # using the setter and getter
-  #+end_src
 
 - Regexp // https://ruby-doc.org/3.2.2/Regexp.html
   - the =match operator= =~ can be used to match a string against it
@@ -246,13 +348,17 @@ https://rubyreferences.github.io/rubychanges/evolution.html
   - nouns of Ruby
 
 - Strings
-  - "",'' are string literals, from more to less work done
-    - "" checks for escape sequences (\) and expression interpolation (#{})
+  - "",%{},'',%q{} are string literals, from more to less work done
+  - "",%{} checks for escape sequences (\) and expression interpolation (#{})
   - Both single and double quotes are used to create strings
+  - #each_char returns an *Enumerator* if not given a block,
+    you can call .each_with_index on it
+  - alternatively #each_char.with_index
 
 - Symbols :foo
   - like lightweight strings
   - immutable
+  - same named symbols have the same ~object_id~
   - used
     - as keys and identifiers
     - when you need a string but you won't be printing it
@@ -262,24 +368,74 @@ https://rubyreferences.github.io/rubychanges/evolution.html
   - capitalized
   - proper nouns of Ruby
 
-- Methods (.)
-  - the verbs of ruby
-  - attached at the end of variables with by a dot
-  - some methods (such as =print=) are kernel methods, won't use the dot
+- Enumerator (class)
+  - as objects they are =Enumerable=
+  - implements *external iterators*, where you control the iteration behavior
+  - Creating
+    - what an iterator method returns if you don't pass it a block
+    - #to_enum -> #next
+    - #enum_for(:each_slice, 3) - in the case the method used for the enumerator takes params
+    - Enumerator.produce - takes an initial value and a block
+      #+begin_src ruby
+        triangular_numbers = Enumerator.produce([1,2]) do |number,count|
+          [number + count, count + 1]
+        end
+        5.times { print triangular_numbers.next.first, " " } # => 1 3 6 10 15
+        p triangular_numbers.first(5).map { _.first } # => [1,3,6,10,15]
+      #+end_src
+    - Enumerator.new {|x| ...}
+      #+begin_src ruby
+        triangular_numbers = Enumerator.new do |yielder| # called when #next
+          number = 0
+          count = 1
+          loop do
+            number += count
+            count += 1
+            yielder.yield(number) # pausing point
+          end
+        end
+        5.times { print triangular_numbers.next, " " } # 1 3 6 10 15
+      #+end_src
 
-- Class Methods (::)
-  - attached after variables and constants by a double colon
-  - created with NAME.new
-  - has/can have
-    - each instance has an ~object_id~ /property/
-    - instance variables
-    - instance methods
-      - called by RECEIVER.METHODNAME
-      - a *message* is being send to the object,
-        which contains the method name along with arguments
-
-- Enumerable (module) https://ruby-doc.org/3.2.2/Enumerable.html
+- Enumerable (module/mixin) https://ruby-doc.org/3.2.2/Enumerable.html
+  - #lazy => Enumerator::Lazy
+    reimplements select/map/... to work with infinite sequences
+    #+begin_src ruby
+      class InfiniteStream
+        def all
+          Enumerator.produce(0) do |number|
+            number += 1
+          end.lazy
+        end
+      end
+      p InfiniteStream.new.all.first(10)
+      p InfiniteStream.new.select { (_1 % 3).zero? }.first(10)
+      # Example:
+      def palindrome(n)
+        n = n.to_s
+        n == n.reverse
+      end
+      p InfiniteStream.new
+        .select { (_1 % 3).zero? }
+        .select { palindrome?(_1) }
+        .first(10)
+      # Example: alternative syntax
+      multiple_of_three = InfiniteStream.new.all.select { (_1 % 3).zero? }
+      p multiple_of_three.first(10)
+      m3_palindrome = multiple_of_three.select { palindrome?(_1) }
+      p m3_palindrome.first(10)
+      # Example: alternative syntax
+      multiple_of_three = -> n { (n % 3).zero? }
+      palindrome = -> n { n = n.to_s; n == n.reverse }
+      p InfiniteStream.new.all
+        .select(&multiple_of_three)
+        .select(&palindrome)
+        .first(10)
+    #+end_src
   - aka a collection of object references
+  - #reduce(0) { |sum,ele| sum + ele }
+    #reduce { |sum,ele| sum + ele }
+    #reduce(:+)
   - #dig: helps to dig through nested data structures
     - Returns if not found nil, doesn't raise an exception
     - From: data[:mcu][0][:actors][1]
@@ -287,6 +443,8 @@ https://rubyreferences.github.io/rubychanges/evolution.html
   - =Array= [] [0,2,nil][1] Array.new
     - #pop/#push      elements from the end
     - #shift/#unshift elements from the beginning
+    - #compact        remove nil
+    - #sample         get random element
     - %w[] to create array of strings
     - %i[] to create array of strings
     - [FROM,LENGTH]
@@ -317,6 +475,7 @@ https://rubyreferences.github.io/rubychanges/evolution.html
 
 - new format https://ruby-doc.org/3.0.4/standard_library_rdoc.html#label-Default+gems
 - old format https://ruby-doc.org/stdlib-3.0.4/
+- rand(1..6)
 
 
 * codebases
@@ -328,6 +487,10 @@ https://rubyreferences.github.io/rubychanges/evolution.html
   - vim+bookmarks
     - http://ratfactor.com/repos/rat-tools/html/new-book.html
     - http://ratfactor.com/cards/interactive-vim
+- rails
+  - +puma https://github.com/mastodon/mastodon
+  - https://github.com/lobsters/lobsters
+  - https://github.com/discourse/discourse
 
 * snippets
 
