--- a/languages/sh/self.org
+++ b/languages/sh/self.org
@@ -28,6 +28,18 @@
   - https://invisible-island.net/dialog/
   - https://github.com/charmbracelet/gum
 - tool: html https://github.com/ericchiang/pup
+  - pup [flags] [css-selectors] [display function]
+  - css-selectors, comma separated
+  - display function
+    |---------------+------------------------------|
+    | text{}        | inner text of selected nodes |
+    | attr{attrkey} | return attributes            |
+    | json{}        | html -> json                 |
+    |---------------+------------------------------|
+  - flags
+    |----+----------------------------------|
+    | -f | read from file, instead of STDIN |
+    |----+----------------------------------|
 - tool: yaml/json/xml/csv/toml https://github.com/mikefarah/yq
 - tool: visualization https://github.com/saulpw/visidata https://www.visidata.org/
 - tool: awk like in cli, with haskell flavor https://github.com/gelisam/hawk
