--- a/languages/sql/sql.org
+++ b/languages/sql/sql.org
@@ -6,6 +6,7 @@
 - https://www.cybertec-postgresql.com/en/postgresql-exclude-beyond-unique/
 - DB Standford 2013 https://www.youtube.com/watch?v=D-k-h0GuFmE&list=PLroEs25KGvwzmvIxYHRhoGTz9w8LeXek0
 - High-Performance Programming https://www.youtube.com/c/HighPerformanceProgramming/videos
+- 19 article https://jvns.ca/blog/2019/10/03/sql-queries-don-t-start-with-select/
 
 * Style Guides
 - https://news.ycombinator.com/item?id=18184731
