--- a/hardware/6502/self.org
+++ b/hardware/6502/self.org
@@ -1,3 +1,14 @@
+- wiki https://en.wikipedia.org/wiki/MOS_Technology_6502
+  - by MOS Technology
+  - 1975-
+  - 1-3 MHz
+  - 56 Instructions
+  - 40-pin DIP
+  - Little-Endian
+  - Width in bits
+    - Data: 8
+    - Address: 16
+
 - http://skilldrick.github.io/easy6502/
 - http://visual6502.org/
 - https://chotrin.org/notes/6502.html
